feat(backend): V2 trust hardening — email, visibility, voting lock
Adds the V2 migration plus the backend plumbing for per-event results
visibility (aggregate_public | host_only), optional participant email
with case-insensitive uniqueness per event, a dedicated
/host/{hostToken}/results endpoint that includes participant detail,
and a voting-closed guard on join/update after finalize.

Also tightens rate-limit keying by normalizing request paths and adds
a periodic bucket cleanup to prevent unbounded growth. Installs curl
in the runtime image so a later HEALTHCHECK can use it.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>