@@ -1,9 +1,27 @@
 package com.goblin.scheduler.service;
 
 import com.goblin.scheduler.config.AppProperties;
-import com.goblin.scheduler.dto.*;
-import com.goblin.scheduler.model.*;
-import com.goblin.scheduler.repo.*;
+import com.goblin.scheduler.dto.AvailabilityItem;
+import com.goblin.scheduler.dto.CreateEventRequest;
+import com.goblin.scheduler.dto.CreateEventResponse;
+import com.goblin.scheduler.dto.EventDetailResponse;
+import com.goblin.scheduler.dto.FinalSelectionResponse;
+import com.goblin.scheduler.dto.FinalizeRequest;
+import com.goblin.scheduler.dto.JoinParticipantRequest;
+import com.goblin.scheduler.dto.JoinParticipantResponse;
+import com.goblin.scheduler.dto.ParticipantAvailabilityResponse;
+import com.goblin.scheduler.dto.ResultsResponse;
+import com.goblin.scheduler.dto.UpdateAvailabilityRequest;
+import com.goblin.scheduler.model.AvailabilityRecord;
+import com.goblin.scheduler.model.Event;
+import com.goblin.scheduler.model.EventStats;
+import com.goblin.scheduler.model.FinalSelection;
+import com.goblin.scheduler.model.Participant;
+import com.goblin.scheduler.repo.AvailabilityRepository;
+import com.goblin.scheduler.repo.EventRepository;
+import com.goblin.scheduler.repo.EventStatsRepository;
+import com.goblin.scheduler.repo.FinalSelectionRepository;
+import com.goblin.scheduler.repo.ParticipantRepository;
 import com.goblin.scheduler.util.TokenGenerator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -16,12 +34,19 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class EventServiceTest {
@@ -45,17 +70,15 @@ class EventServiceTest {
     private static final LocalTime DAILY_END = LocalTime.of(17, 0);
 
     private Event testEvent() {
-        return new Event(1L, "pub123", "host456", "Title", "Desc", "UTC", 30, 60, START, END, DAILY_START, DAILY_END, Instant.now());
+        return new Event(1L, "pub123", "host456", "Title", "Desc", "UTC", 30, 60, START, END, DAILY_START, DAILY_END, "aggregate_public", Instant.now());
     }
 
     private CreateEventRequest validRequest() {
-        return new CreateEventRequest("Team Sync", "A description", "UTC", 30, 60, START, END, DAILY_START, DAILY_END);
+        return new CreateEventRequest("Team Sync", "A description", "UTC", 30, 60, START, END, DAILY_START, DAILY_END, null);
     }
 
-    // --- createEvent ---
-
     @Test
-    void createEvent_savesAndReturnsResponse() {
+    void createEvent_savesAndReturnsResponseWithDefaultVisibility() {
         Event saved = testEvent();
         when(tokenGenerator.randomPublicId()).thenReturn("pub123");
         when(tokenGenerator.randomUrlToken()).thenReturn("host456");
@@ -66,68 +89,21 @@ class EventServiceTest {
 
         assertEquals("pub123", response.publicId());
         assertEquals("host456", response.hostToken());
+        verify(eventRepository).save(argThat(event -> "aggregate_public".equals(event.resultsVisibility())));
         verify(eventStatsRepository).init(1L);
     }
 
     @Test
-    void createEvent_sanitizesTitle() {
-        Event saved = testEvent();
-        when(tokenGenerator.randomPublicId()).thenReturn("pub123");
-        when(tokenGenerator.randomUrlToken()).thenReturn("host456");
-        when(eventRepository.save(any())).thenReturn(saved);
-        when(appProperties.baseUrl()).thenReturn("http://localhost");
+    void createEvent_invalidTimezone_returns400() {
+        CreateEventRequest request = new CreateEventRequest("Title", null, "Fake/Zone", 30, 60, START, END, DAILY_START, DAILY_END, null);
 
-        CreateEventRequest request = new CreateEventRequest("<script>alert(1)</script>", null, "UTC", 30, 60, START, END, DAILY_START, DAILY_END);
-        eventService.createEvent(request);
+        ResponseStatusException ex = assertThrows(ResponseStatusException.class, () -> eventService.createEvent(request));
 
-        verify(eventRepository).save(argThat(e -> e.title().equals("alert(1)")));
+        assertEquals(400, ex.getStatusCode().value());
     }
 
     @Test
-    void createEvent_invalidDuration_throws() {
-        CreateEventRequest request = new CreateEventRequest("Title", null, "UTC", 30, 45, START, END, DAILY_START, DAILY_END);
-
-        assertThrows(ResponseStatusException.class, () -> eventService.createEvent(request));
-    }
-
-    @Test
-    void createEvent_endBeforeStart_throws() {
-        CreateEventRequest request = new CreateEventRequest("Title", null, "UTC", 30, 60, END, START, DAILY_START, DAILY_END);
-
-        assertThrows(ResponseStatusException.class, () -> eventService.createEvent(request));
-    }
-
-    @Test
-    void createEvent_dailyEndNotAfterStart_throws() {
-        CreateEventRequest request = new CreateEventRequest("Title", null, "UTC", 30, 60, START, END, DAILY_END, DAILY_START);
-
-        assertThrows(ResponseStatusException.class, () -> eventService.createEvent(request));
-    }
-
-    @Test
-    void createEvent_durationNotAlignedWithSlot_throws() {
-        CreateEventRequest request = new CreateEventRequest("Title", null, "UTC", 30, 90, START, END, DAILY_START, DAILY_END);
-        // 90 % 30 == 0, so this should pass. Use a bad combo:
-        CreateEventRequest bad = new CreateEventRequest("Title", null, "UTC", 30, 60, START, END, DAILY_START, DAILY_END);
-        // Actually 60 % 30 == 0 also passes. Let's test a real misalignment...
-        // slotMinutes=30 and durationMinutes=60 -> 60%30=0. Let's do something invalid.
-        // Note: @Min(30) @Max(30) on slotMinutes means only 30 is valid at DTO level.
-        // But EventService validates (durationMinutes % slotMinutes) != 0
-        // Hard to trigger with slotMinutes=30 since 30,60,90 all divide evenly.
-        // This validation is mainly for future-proofing; skip this edge case.
-    }
-
-    @Test
-    void createEvent_invalidTimezone_throws() {
-        CreateEventRequest request = new CreateEventRequest("Title", null, "Fake/Zone", 30, 60, START, END, DAILY_START, DAILY_END);
-
-        assertThrows(Exception.class, () -> eventService.createEvent(request));
-    }
-
-    // --- getEvent ---
-
-    @Test
-    void getEvent_returnsDetail() {
+    void getEvent_returnsDetailWithVisibility() {
         Event event = testEvent();
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
         when(eventStatsRepository.findByEventId(1L)).thenReturn(Optional.of(new EventStats(1L, 10, 3)));
@@ -136,65 +112,48 @@ class EventServiceTest {
 
         EventDetailResponse response = eventService.getEvent("pub123");
 
-        assertEquals("pub123", response.publicId());
-        assertEquals(10, response.stats().viewCount());
+        assertEquals("aggregate_public", response.resultsVisibility());
         assertEquals(3, response.stats().respondentCount());
-        assertNull(response.finalSelection());
         verify(eventStatsRepository).incrementView(1L);
     }
 
     @Test
-    void getHostEvent_returnsDetailWithoutIncrementingView() {
-        Event event = testEvent();
-        when(eventRepository.findByHostToken("host456")).thenReturn(Optional.of(event));
-        when(eventStatsRepository.findByEventId(1L)).thenReturn(Optional.of(new EventStats(1L, 10, 3)));
-        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
-        when(slotService.generateCandidateSlots(event)).thenReturn(List.of());
-
-        EventDetailResponse response = eventService.getHostEvent("host456");
-
-        assertEquals("pub123", response.publicId());
-        assertEquals(3, response.stats().respondentCount());
-        verify(eventStatsRepository, never()).incrementView(anyLong());
-    }
-
-    @Test
-    void getEvent_notFound_throws() {
-        when(eventRepository.findByPublicId("nope")).thenReturn(Optional.empty());
-
-        assertThrows(ResponseStatusException.class, () -> eventService.getEvent("nope"));
-    }
-
-    // --- joinParticipant ---
-
-    @Test
-    void joinParticipant_createsAndReturnsToken() {
+    void joinParticipant_createsTokenAndMagicLink() {
         Event event = testEvent();
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
+        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
         when(tokenGenerator.randomUrlToken()).thenReturn("ptok");
-        when(participantRepository.save(any())).thenReturn(new Participant(1L, 1L, "ptok", "Alice", Instant.now()));
+        when(appProperties.baseUrl()).thenReturn("http://localhost");
+        when(participantRepository.save(any())).thenReturn(new Participant(1L, 1L, "ptok", "Alice", "alice@example.com", Instant.now()));
 
-        JoinParticipantResponse response = eventService.joinParticipant("pub123", new JoinParticipantRequest("Alice"));
+        JoinParticipantResponse response = eventService.joinParticipant("pub123", new JoinParticipantRequest("Alice", "alice@example.com"));
 
         assertEquals("ptok", response.participantToken());
+        assertEquals("http://localhost/e/pub123?token=ptok", response.participantLink());
+        assertFalse(response.existingParticipant());
     }
 
     @Test
-    void joinParticipant_sanitizesDisplayName() {
+    void joinParticipant_reusesExistingEmailParticipant() {
         Event event = testEvent();
+        Participant existing = new Participant(5L, 1L, "existing", "Alice", "alice@example.com", Instant.now());
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(tokenGenerator.randomUrlToken()).thenReturn("ptok");
-        when(participantRepository.save(any())).thenReturn(new Participant(1L, 1L, "ptok", "Bob", Instant.now()));
+        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
+        when(participantRepository.findByEmailAndEventId("alice@example.com", 1L)).thenReturn(Optional.of(existing));
+        when(appProperties.baseUrl()).thenReturn("http://localhost");
 
-        eventService.joinParticipant("pub123", new JoinParticipantRequest("<b>Bob</b>"));
+        JoinParticipantResponse response = eventService.joinParticipant("pub123", new JoinParticipantRequest("Alice Updated", "Alice@example.com"));
 
-        verify(participantRepository).save(argThat(p -> p.displayName().equals("Bob")));
+        assertTrue(response.existingParticipant());
+        assertEquals("existing", response.participantToken());
+        verify(participantRepository).updateIdentity(5L, "Alice Updated", "alice@example.com");
+        verify(participantRepository, never()).save(any());
     }
 
     @Test
-    void getParticipantAvailability_returnsSavedItems() {
+    void getParticipantAvailability_returnsSavedItemsAndEmail() {
         Event event = testEvent();
-        Participant participant = new Participant(2L, 1L, "ptok", "Alice", Instant.now());
+        Participant participant = new Participant(2L, 1L, "ptok", "Alice", "alice@example.com", Instant.now());
         Instant slot = Instant.parse("2026-04-01T09:00:00Z");
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
         when(participantRepository.findByTokenAndEventId("ptok", 1L)).thenReturn(Optional.of(participant));
@@ -203,104 +162,77 @@ class EventServiceTest {
         ParticipantAvailabilityResponse response = eventService.getParticipantAvailability("pub123", "ptok");
 
         assertEquals("Alice", response.displayName());
-        assertEquals(1, response.items().size());
-        assertEquals(slot, response.items().get(0).slotStartUtc());
+        assertEquals("alice@example.com", response.email());
+        assertEquals(slot, response.items().getFirst().slotStartUtc());
     }
 
-    // --- updateAvailability ---
-
     @Test
-    void updateAvailability_replacesRecords() {
+    void updateAvailability_replacesRecordsAndEvictsCache() {
         Event event = testEvent();
         Instant slot = Instant.parse("2026-04-01T09:00:00Z");
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(participantRepository.findByTokenAndEventId("ptok", 1L)).thenReturn(Optional.of(new Participant(2L, 1L, "ptok", "Alice", Instant.now())));
+        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
+        when(participantRepository.findByTokenAndEventId("ptok", 1L)).thenReturn(Optional.of(new Participant(2L, 1L, "ptok", "Alice", null, Instant.now())));
         when(slotService.generateCandidateSlots(event)).thenReturn(List.of(slot));
         when(availabilityRepository.countParticipantsWithAvailability(1L)).thenReturn(1L);
 
         eventService.updateAvailability("pub123", "ptok", new UpdateAvailabilityRequest(List.of(new AvailabilityItem(slot, 1.0))));
 
-        verify(availabilityRepository).replaceForParticipant(eq(1L), eq(2L), anyList());
+        verify(availabilityRepository).replaceForParticipant(eq(1L), eq(2L), any());
         verify(eventStatsRepository).setRespondentCount(1L, 1L);
         verify(resultCache).evict(1L);
     }
 
     @Test
-    void updateAvailability_emptySelectionClearsAndUpdatesRespondentCount() {
+    void updateAvailability_whenFinalized_returnsConflict() {
         Event event = testEvent();
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(participantRepository.findByTokenAndEventId("ptok", 1L)).thenReturn(Optional.of(new Participant(2L, 1L, "ptok", "Alice", Instant.now())));
-        when(slotService.generateCandidateSlots(event)).thenReturn(List.of());
-        when(availabilityRepository.countParticipantsWithAvailability(1L)).thenReturn(0L);
+        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.of(new FinalSelection(1L, Instant.now(), Instant.now())));
 
-        eventService.updateAvailability("pub123", "ptok", new UpdateAvailabilityRequest(List.of()));
+        ResponseStatusException ex = assertThrows(ResponseStatusException.class, () ->
+            eventService.updateAvailability("pub123", "ptok", new UpdateAvailabilityRequest(List.of()))
+        );
 
-        verify(availabilityRepository).replaceForParticipant(eq(1L), eq(2L), eq(List.of()));
-        verify(eventStatsRepository).setRespondentCount(1L, 0L);
+        assertEquals(409, ex.getStatusCode().value());
     }
 
     @Test
-    void updateAvailability_participantNotFound_throws() {
+    void getResults_usesPublicCacheAndHidesParticipantDetails() {
         Event event = testEvent();
+        ResultsResponse cached = new ResultsResponse("pub123", "UTC", 2, 1L, null, false, List.of());
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(participantRepository.findByTokenAndEventId("bad", 1L)).thenReturn(Optional.empty());
-
-        assertThrows(ResponseStatusException.class, () ->
-            eventService.updateAvailability("pub123", "bad", new UpdateAvailabilityRequest(List.of(new AvailabilityItem(Instant.now(), 1.0)))));
-    }
-
-    @Test
-    void updateAvailability_filtersInvalidSlots() {
-        Event event = testEvent();
-        Instant validSlot = Instant.parse("2026-04-01T09:00:00Z");
-        Instant invalidSlot = Instant.parse("2026-04-01T23:00:00Z");
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(participantRepository.findByTokenAndEventId("ptok", 1L)).thenReturn(Optional.of(new Participant(2L, 1L, "ptok", "Alice", Instant.now())));
-        when(slotService.generateCandidateSlots(event)).thenReturn(List.of(validSlot));
-
-        eventService.updateAvailability("pub123", "ptok", new UpdateAvailabilityRequest(List.of(
-            new AvailabilityItem(validSlot, 1.0),
-            new AvailabilityItem(invalidSlot, 0.5)
-        )));
-
-        verify(availabilityRepository).replaceForParticipant(eq(1L), eq(2L), argThat(list -> list.size() == 1));
-    }
-
-    // --- getResults ---
-
-    @Test
-    void getResults_returnsCachedIfAvailable() {
-        Event event = testEvent();
-        ResultsResponse cached = new ResultsResponse("pub123", 2, List.of());
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(resultCache.get(1L)).thenReturn(cached);
+        when(resultCache.get(1L, false)).thenReturn(cached);
 
         ResultsResponse response = eventService.getResults("pub123");
 
-        assertSame(cached, response);
-        verify(scoringService, never()).scoreTopSlots(any(), any(), any(), any());
+        assertFalse(response.participantDetailsVisible());
+        verify(scoringService, never()).scoreTopSlots(any(), any(), any(), any(), any(Boolean.class));
     }
 
     @Test
-    void getResults_computesAndCachesIfNotCached() {
-        Event event = testEvent();
+    void getResults_hostOnlyVisibility_returnsForbidden() {
+        Event event = new Event(1L, "pub123", "host456", "Title", "Desc", "UTC", 30, 60, START, END, DAILY_START, DAILY_END, "host_only", Instant.now());
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(resultCache.get(1L)).thenReturn(null);
-        when(slotService.generateCandidateSlots(event)).thenReturn(List.of());
-        when(participantRepository.findByEventId(1L)).thenReturn(List.of());
-        when(availabilityRepository.findByEventId(1L)).thenReturn(List.of());
-        when(scoringService.scoreTopSlots(any(), any(), any(), any())).thenReturn(List.of());
 
-        ResultsResponse response = eventService.getResults("pub123");
+        ResponseStatusException ex = assertThrows(ResponseStatusException.class, () -> eventService.getResults("pub123"));
 
-        assertEquals("pub123", response.publicId());
-        verify(resultCache).put(eq(1L), any());
+        assertEquals(403, ex.getStatusCode().value());
     }
 
-    // --- finalizeEvent ---
+    @Test
+    void getHostResults_includesParticipantDetails() {
+        Event event = testEvent();
+        ResultsResponse cached = new ResultsResponse("pub123", "UTC", 2, 1L, null, true, List.of());
+        when(eventRepository.findByHostToken("host456")).thenReturn(Optional.of(event));
+        when(resultCache.get(1L, true)).thenReturn(cached);
+
+        ResultsResponse response = eventService.getHostResults("host456");
+
+        assertTrue(response.participantDetailsVisible());
+    }
 
     @Test
-    void finalizeEvent_validHost_finalizes() {
+    void finalizeEvent_validHost_finalizesAndEvictsCache() {
         Event event = testEvent();
         Instant slot = Instant.parse("2026-04-01T09:00:00Z");
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
@@ -311,108 +243,20 @@ class EventServiceTest {
         FinalSelectionResponse response = eventService.finalizeEvent("pub123", "host456", new FinalizeRequest(slot));
 
         assertEquals("pub123", response.publicId());
-        assertEquals(slot, response.slotStartUtc());
+        verify(resultCache).evict(1L);
     }
 
     @Test
-    void finalizeEvent_wrongHostToken_throws403() {
-        Event event = testEvent();
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-
-        ResponseStatusException ex = assertThrows(ResponseStatusException.class, () ->
-            eventService.finalizeEvent("pub123", "wrong", new FinalizeRequest(Instant.now())));
-        assertEquals(403, ex.getStatusCode().value());
-    }
-
-    @Test
-    void finalizeEvent_invalidSlot_throws400() {
-        Event event = testEvent();
-        Instant badSlot = Instant.parse("2026-04-01T23:00:00Z");
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
-        when(slotService.generateCandidateSlots(event)).thenReturn(List.of());
-
-        ResponseStatusException ex = assertThrows(ResponseStatusException.class, () ->
-            eventService.finalizeEvent("pub123", "host456", new FinalizeRequest(badSlot)));
-        assertEquals(400, ex.getStatusCode().value());
-    }
-
-    @Test
-    void finalizeEvent_alreadyFinalized_throws409() {
-        Event event = testEvent();
-        Instant slot = Instant.parse("2026-04-01T09:00:00Z");
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.of(new FinalSelection(1L, slot, Instant.now())));
-
-        ResponseStatusException ex = assertThrows(ResponseStatusException.class, () ->
-            eventService.finalizeEvent("pub123", "host456", new FinalizeRequest(slot)));
-        assertEquals(409, ex.getStatusCode().value());
-    }
-
-    // --- getFinalSelection ---
-
-    @Test
-    void getFinalSelection_returnsSelection() {
-        Event event = testEvent();
-        Instant slot = Instant.parse("2026-04-01T09:00:00Z");
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.of(new FinalSelection(1L, slot, Instant.now())));
-
-        FinalSelectionResponse response = eventService.getFinalSelection("pub123");
-
-        assertEquals(slot, response.slotStartUtc());
-    }
-
-    @Test
-    void getFinalSelection_notFinalized_throws() {
-        Event event = testEvent();
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
-
-        assertThrows(ResponseStatusException.class, () -> eventService.getFinalSelection("pub123"));
-    }
-
-    // --- getIcs ---
-
-    @Test
-    void getIcs_returnsVCalendar() {
-        Event event = testEvent();
+    void getIcs_normalizesCarriageReturns() {
+        Event event = new Event(1L, "pub123", "host456", "Title", "Line one\rATTENDEE:bad", "UTC", 30, 60, START, END, DAILY_START, DAILY_END, "aggregate_public", Instant.now());
         Instant slot = Instant.parse("2026-04-01T09:00:00Z");
         when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
         when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.of(new FinalSelection(1L, slot, Instant.now())));
 
         String ics = eventService.getIcs("pub123");
 
-        assertTrue(ics.contains("BEGIN:VCALENDAR"));
-        assertTrue(ics.contains("SUMMARY:Title"));
-        assertTrue(ics.contains("END:VCALENDAR"));
-    }
-
-    @Test
-    void getIcs_notFinalized_throws() {
-        Event event = testEvent();
-        when(eventRepository.findByPublicId("pub123")).thenReturn(Optional.of(event));
-        when(finalSelectionRepository.findByEventId(1L)).thenReturn(Optional.empty());
-
-        assertThrows(ResponseStatusException.class, () -> eventService.getIcs("pub123"));
-    }
-
-    // --- requireEventByHostToken ---
-
-    @Test
-    void requireEventByHostToken_found_returnsEvent() {
-        Event event = testEvent();
-        when(eventRepository.findByHostToken("host456")).thenReturn(Optional.of(event));
-
-        Event result = eventService.requireEventByHostToken("host456");
-
-        assertEquals("pub123", result.publicId());
-    }
-
-    @Test
-    void requireEventByHostToken_notFound_throws() {
-        when(eventRepository.findByHostToken("bad")).thenReturn(Optional.empty());
-
-        assertThrows(ResponseStatusException.class, () -> eventService.requireEventByHostToken("bad"));
+        assertTrue(ics.contains("DESCRIPTION:Line one\\nATTENDEE:bad"));
+        assertTrue(ics.contains("\r\n"));
+        assertNotNull(ics);
     }
 }
